[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "feedbin-mcp"
version = "0.1.0"
description = "MCP server for the Feedbin RSS API"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
feedbin-mcp = "feedbin_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["feedbin_mcp"]
